--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "server.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "server": "nodemon 14-mongodb-mongoose.js"
+    "server": "nodemon 15-mvc.js"
   },
   "author": "Raman",
   "license": "ISC",
